tests/cases/generics/errors/generic-associated-method-uninferred.ari
struct Factory {
}

struct Box[T] {
  value: T,
}

impl Factory {
  fn make[U]() -> Box[U] {
    Box { value: 0 }
  }
}

fn main() -> i64 {
  let value = Factory::make();
  0
}
